# ff3_vita

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: compilation.yml
companion/: main.cpp
loader/: bridge.c  bridge.h  config.h  dialog.c  main.c  main.cpp  so_util.c  so_util.h  softfp_wrappers.hpp
sce_sys/livearea/contents/: template.xml
